# actions

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt
.github/workflows/: release.yml  validate.yml
docs/: README.md  action-index.md  development.md  releasing.md
publish-to-appgallery/: README.md  action.yml  pyproject.toml
publish-to-appgallery/docs/: development.md  eas-integration.md  huawei-credentials.md  recovery.md  usage.md
publish-to-appgallery/src/publish_to_appgallery/: __init__.py  __main__.py  artifact.py  auth.py  cli.py  client.py  config.py  outputs.py
publish-to-appgallery/tests/: conftest.py  test_action_metadata.py  test_artifact.py  test_auth.py  test_client.py  test_config_outputs_cli.py  test_outputs.py
update-gcs-cors/: README.md  action.yml  pyproject.toml
update-gcs-cors/docs/: development.md  usage.md
update-gcs-cors/src/update_gcs_cors/: __init__.py  __main__.py  cli.py
update-gcs-cors/tests/: conftest.py  test_action_metadata.py  test_cli.py
