[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "publish-to-appgallery"
version = "1.0.0"
description = "GitHub Action helper for publishing Android App Bundles to Huawei AppGallery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Irazu Labs" }]
dependencies = ["cryptography==49.0.0"]

[project.optional-dependencies]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "PyYAML>=6.0",
  "ruff>=0.8",
  "types-PyYAML>=6.0",
]

[project.scripts]
publish-to-appgallery = "publish_to_appgallery.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
