[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "update-gcs-cors"
version = "1.1.0"
description = "GitHub Action helper for updating Google Cloud Storage bucket CORS."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Irazu Labs" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "PyYAML>=6.0",
  "ruff>=0.8",
  "types-PyYAML>=6.0",
]

[project.scripts]
update-gcs-cors = "update_gcs_cors.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
